--- a/classData/pandas_real_data_processing.ipynb
+++ b/classData/pandas_real_data_processing.ipynb
@@ -55,9 +55,152 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>FIPS</th>\n",
+       "      <th>Admin2</th>\n",
+       "      <th>Province_State</th>\n",
+       "      <th>Country_Region</th>\n",
+       "      <th>Last_Update</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Long_</th>\n",
+       "      <th>Confirmed</th>\n",
+       "      <th>Deaths</th>\n",
+       "      <th>Recovered</th>\n",
+       "      <th>Active</th>\n",
+       "      <th>Combined_Key</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>45001.0</td>\n",
+       "      <td>Abbeville</td>\n",
+       "      <td>South Carolina</td>\n",
+       "      <td>US</td>\n",
+       "      <td>2020-04-01 21:58:49</td>\n",
+       "      <td>34.223334</td>\n",
+       "      <td>-82.461707</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Abbeville, South Carolina, US</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>22001.0</td>\n",
+       "      <td>Acadia</td>\n",
+       "      <td>Louisiana</td>\n",
+       "      <td>US</td>\n",
+       "      <td>2020-04-01 21:58:49</td>\n",
+       "      <td>30.295065</td>\n",
+       "      <td>-92.414197</td>\n",
+       "      <td>47</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Acadia, Louisiana, US</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>51001.0</td>\n",
+       "      <td>Accomack</td>\n",
+       "      <td>Virginia</td>\n",
+       "      <td>US</td>\n",
+       "      <td>2020-04-01 21:58:49</td>\n",
+       "      <td>37.767072</td>\n",
+       "      <td>-75.632346</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Accomack, Virginia, US</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>16001.0</td>\n",
+       "      <td>Ada</td>\n",
+       "      <td>Idaho</td>\n",
+       "      <td>US</td>\n",
+       "      <td>2020-04-01 21:58:49</td>\n",
+       "      <td>43.452658</td>\n",
+       "      <td>-116.241552</td>\n",
+       "      <td>195</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Ada, Idaho, US</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>19001.0</td>\n",
+       "      <td>Adair</td>\n",
+       "      <td>Iowa</td>\n",
+       "      <td>US</td>\n",
+       "      <td>2020-04-01 21:58:49</td>\n",
+       "      <td>41.330756</td>\n",
+       "      <td>-94.471059</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Adair, Iowa, US</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      FIPS     Admin2  Province_State Country_Region          Last_Update  \\\n",
+       "0  45001.0  Abbeville  South Carolina             US  2020-04-01 21:58:49   \n",
+       "1  22001.0     Acadia       Louisiana             US  2020-04-01 21:58:49   \n",
+       "2  51001.0   Accomack        Virginia             US  2020-04-01 21:58:49   \n",
+       "3  16001.0        Ada           Idaho             US  2020-04-01 21:58:49   \n",
+       "4  19001.0      Adair            Iowa             US  2020-04-01 21:58:49   \n",
+       "\n",
+       "         Lat       Long_  Confirmed  Deaths  Recovered  Active  \\\n",
+       "0  34.223334  -82.461707          4       0          0       0   \n",
+       "1  30.295065  -92.414197         47       1          0       0   \n",
+       "2  37.767072  -75.632346          7       0          0       0   \n",
+       "3  43.452658 -116.241552        195       3          0       0   \n",
+       "4  41.330756  -94.471059          1       0          0       0   \n",
+       "\n",
+       "                    Combined_Key  \n",
+       "0  Abbeville, South Carolina, US  \n",
+       "1          Acadia, Louisiana, US  \n",
+       "2         Accomack, Virginia, US  \n",
+       "3                 Ada, Idaho, US  \n",
+       "4                Adair, Iowa, US  "
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "PATH = \"COVID-19-master/csse_covid_19_data/csse_covid_19_daily_reports/\"\n",
@@ -67,9 +210,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Province/State</th>\n",
+       "      <th>Country/Region</th>\n",
+       "      <th>Last Update</th>\n",
+       "      <th>Confirmed</th>\n",
+       "      <th>Deaths</th>\n",
+       "      <th>Recovered</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Hubei</td>\n",
+       "      <td>Mainland China</td>\n",
+       "      <td>2020-03-01T10:13:19</td>\n",
+       "      <td>66907</td>\n",
+       "      <td>2761</td>\n",
+       "      <td>31536</td>\n",
+       "      <td>30.9756</td>\n",
+       "      <td>112.2707</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>South Korea</td>\n",
+       "      <td>2020-03-01T23:43:03</td>\n",
+       "      <td>3736</td>\n",
+       "      <td>17</td>\n",
+       "      <td>30</td>\n",
+       "      <td>36.0000</td>\n",
+       "      <td>128.0000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Italy</td>\n",
+       "      <td>2020-03-01T23:23:02</td>\n",
+       "      <td>1694</td>\n",
+       "      <td>34</td>\n",
+       "      <td>83</td>\n",
+       "      <td>43.0000</td>\n",
+       "      <td>12.0000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Guangdong</td>\n",
+       "      <td>Mainland China</td>\n",
+       "      <td>2020-03-01T14:13:18</td>\n",
+       "      <td>1349</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1016</td>\n",
+       "      <td>23.3417</td>\n",
+       "      <td>113.4244</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Henan</td>\n",
+       "      <td>Mainland China</td>\n",
+       "      <td>2020-03-01T14:13:18</td>\n",
+       "      <td>1272</td>\n",
+       "      <td>22</td>\n",
+       "      <td>1198</td>\n",
+       "      <td>33.8820</td>\n",
+       "      <td>113.6140</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Province/State  Country/Region          Last Update  Confirmed  Deaths  \\\n",
+       "0          Hubei  Mainland China  2020-03-01T10:13:19      66907    2761   \n",
+       "1            NaN     South Korea  2020-03-01T23:43:03       3736      17   \n",
+       "2            NaN           Italy  2020-03-01T23:23:02       1694      34   \n",
+       "3      Guangdong  Mainland China  2020-03-01T14:13:18       1349       7   \n",
+       "4          Henan  Mainland China  2020-03-01T14:13:18       1272      22   \n",
+       "\n",
+       "   Recovered  Latitude  Longitude  \n",
+       "0      31536   30.9756   112.2707  \n",
+       "1         30   36.0000   128.0000  \n",
+       "2         83   43.0000    12.0000  \n",
+       "3       1016   23.3417   113.4244  \n",
+       "4       1198   33.8820   113.6140  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "PATH = \"COVID-19-master/csse_covid_19_data/csse_covid_19_daily_reports/\"\n",
@@ -86,9 +341,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Province_State</th>\n",
+       "      <th>Country_Region</th>\n",
+       "      <th>Confirmed</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Anhui</td>\n",
+       "      <td>Mainland China</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Beijing</td>\n",
+       "      <td>Mainland China</td>\n",
+       "      <td>14.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Chongqing</td>\n",
+       "      <td>Mainland China</td>\n",
+       "      <td>6.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Fujian</td>\n",
+       "      <td>Mainland China</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Gansu</td>\n",
+       "      <td>Mainland China</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Province_State  Country_Region  Confirmed\n",
+       "0          Anhui  Mainland China        1.0\n",
+       "1        Beijing  Mainland China       14.0\n",
+       "2      Chongqing  Mainland China        6.0\n",
+       "3         Fujian  Mainland China        1.0\n",
+       "4          Gansu  Mainland China        NaN"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "doc = pd.read_csv(PATH + \"01-22-2020.csv\", encoding='utf-8-sig')\n",
     "try:\n",
@@ -138,9 +468,151 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>Unnamed: 0.1</th>\n",
+       "      <th>UID</th>\n",
+       "      <th>iso2</th>\n",
+       "      <th>iso3</th>\n",
+       "      <th>code3</th>\n",
+       "      <th>FIPS</th>\n",
+       "      <th>Admin2</th>\n",
+       "      <th>Province_State</th>\n",
+       "      <th>Country_Region</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Long_</th>\n",
+       "      <th>Combined_Key</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>BW</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Botswana</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Botswana</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>BI</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Burundi</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Burundi</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>SL</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Sierra Leone</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Sierra Leone</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>AF</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>33.93911</td>\n",
+       "      <td>67.709953</td>\n",
+       "      <td>Afghanistan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>ALB</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Albania</td>\n",
+       "      <td>41.15330</td>\n",
+       "      <td>20.168300</td>\n",
+       "      <td>Albania</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0  Unnamed: 0.1  UID iso2 iso3  code3  FIPS Admin2 Province_State  \\\n",
+       "0           0             0  NaN   BW  NaN    NaN   NaN    NaN            NaN   \n",
+       "1           1             1  NaN   BI  NaN    NaN   NaN    NaN            NaN   \n",
+       "2           2             2  NaN   SL  NaN    NaN   NaN    NaN            NaN   \n",
+       "3           3             3  4.0   AF  AFG    4.0   NaN    NaN            NaN   \n",
+       "4           4             4  8.0   AL  ALB    8.0   NaN    NaN            NaN   \n",
+       "\n",
+       "  Country_Region       Lat      Long_  Combined_Key  \n",
+       "0       Botswana       NaN        NaN      Botswana  \n",
+       "1        Burundi       NaN        NaN       Burundi  \n",
+       "2   Sierra Leone       NaN        NaN  Sierra Leone  \n",
+       "3    Afghanistan  33.93911  67.709953   Afghanistan  \n",
+       "4        Albania  41.15330  20.168300       Albania  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "country_info = pd.read_csv(\"COVID-19-master/csse_covid_19_data/UID_ISO_FIPS_LookUp_Table.csv\", encoding='utf-8-sig')\n",
     "country_info.head()"
